--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,23 @@
-= ab_redmine_csv_import_users
+= Csv import users
 
-Description goes here
+== Install
+
+* Copy csv_import_users plugin to {RAILS_APP}/plugins on your redmine path
+* Run bundle install --without development test RAILS_ENV=production
+
+== Uninstall
+
+rake redmine:plugins NAME= csv_import_users RAILS_ENV=production
+rm -r plugins/csv_import_users
+
+== Requirements
+
+* Redmine 2.2.4.stable and above
+
+== Test
+
+rake db:drop RAILS_ENV=test
+rake db:migrate RAILS_ENV=test
+rake redmine:plugins:test:functionals  PLUGIN = csv_import_users RAILS_ENV=test
+rake redmine:plugins:test PLUGIN = csv_import_users RAILS_ENV=test
+rake db:drop RAILS_ENV=test && rake db:create db:migrate redmine:plugins:migrate RAILS_ENV=test && rake redmine:plugins:test PLUGIN=csv_import_users RAILS_ENV=test
