--- a/README.rdoc
+++ b/README.rdoc
@@ -7,8 +7,8 @@
 
 == Uninstall
 
-rake redmine:plugins NAME= csv_import_users RAILS_ENV=production
-rm -r plugins/csv_import_users
+* rake redmine:plugins NAME= csv_import_users RAILS_ENV=production
+* rm -r plugins/csv_import_users
 
 == Requirements
 
@@ -16,8 +16,10 @@ rm -r plugins/csv_import_users
 
 == Test
 
-rake db:drop RAILS_ENV=test
-rake db:migrate RAILS_ENV=test
-rake redmine:plugins:test:functionals  PLUGIN = csv_import_users RAILS_ENV=test
-rake redmine:plugins:test PLUGIN = csv_import_users RAILS_ENV=test
-rake db:drop RAILS_ENV=test && rake db:create db:migrate redmine:plugins:migrate RAILS_ENV=test && rake redmine:plugins:test PLUGIN=csv_import_users RAILS_ENV=test
+* rake db:drop RAILS_ENV=test
+* rake db:migrate RAILS_ENV=test
+* rake redmine:plugins:test:functionals  PLUGIN = csv_import_users RAILS_ENV=test
+* rake redmine:plugins:test PLUGIN = csv_import_users RAILS_ENV=test
+* rake db:drop RAILS_ENV=test && rake db:create db:migrate redmine:plugins:migrate RAILS_ENV=test && rake redmine:plugins:test PLUGIN=csv_import_users RAILS_ENV=test
+
+This software is licensed under the terms of the GNU General Public License (GPL) v2. See COPYRIGHT and COPYING for details.
