--- a/README.rdoc
+++ b/README.rdoc
@@ -14,6 +14,13 @@
 
 * Redmine 2.2.4.stable and above
 
+== How it works
+
+* To create user, create a CSV.
+* Go to Administration > Users. Click "import users" link to upload CSV.
+* Once CSV is uploaded properly, a view will be populated for field mapping.
+* After mapping, submit form. It will create users listed in CSV.
+
 == Test
 
 * rake db:drop RAILS_ENV=test
